Fix Layout Thumbnail Overlap

--- a/client/src/components/templateSelectorPage/LayoutThumbnail.css
+++ b/client/src/components/templateSelectorPage/LayoutThumbnail.css
@@ -1,6 +1,6 @@
 .layout-thumbnail-card
 {
-    width: 24rem;
+    width: 100%;
     height: 16rem;
     position: relative;
     display: flex;
